syntax = "proto3";

option csharp_namespace = "ReviewService";

service GrpcReviewService{
    rpc AddReview(GrpcReviewDto) returns (Empty);
    rpc UpdateReview(GrpcReviewDto) returns(Empty);
    rpc DeleteReview(GrpcReviewDto) returns(Empty);
    rpc GetReviewsByInventoryId(GrpcUserAndInventoryId) returns(GrpcListedReviews);
    rpc GetReviewByUserId(GrpcUserId) returns(GrpcListedReviews);
    rpc GetReviewByUserIdAndInventoryId(GrpcUserAndInventoryId) returns(GrpcReviewDto);
}

message GrpcReviewDto {
    optional string id = 1;
    int32 inventory_id = 2;
    int32 external_user_id = 3;
    string username = 4;
    int32 stars = 5;
    optional string comment = 6;
}

message GrpcListedReviews{
    repeated GrpcReviewDto dto = 1;
}

message GrpcUserAndInventoryId{
    string inventory_id = 1;
    int32 user_id = 2;
}

message GrpcUserId{
    int32 user_id = 1;
}


message Empty {

}
